plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'co.sena.edu'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail' // Dependencia de JavaMail añadida
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Dependencia de AWS SDK para S3 (compatible con Cloudflare R2)
	implementation 'software.amazon.awssdk:s3:2.20.64'

	compileOnly 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Dependencias adicionales
	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
	implementation group: 'org.json', name: 'json', version: '20240303'
}

tasks.named('test') {
	useJUnitPlatform()
}
